--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -2253,6 +2253,7 @@
             <script src="/js/shared/export-tools.js"></script>
             <script src="/js/shared/ui-table.js"></script>
             <script src="/js/shared/ui-pagination.js"></script>
+            <script src="/js/utils/query-state.js"></script>
 
         <!-- 基礎資料：客戶 / 負責人 / 站點   -->
 
