--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -109,10 +109,9 @@
                 <!-- 功能分頁 -->
                 <nav class="grid grid-cols-2 md:grid-cols-7 gap-2">
                   <button data-tab="dashboard" class="tab tab-active">儀表板</button>
-                  <button data-tab="transactions"  class="tab">交易登記</button>
+                  <button data-tab="transactions"  class="tab">收/退料</button>
                   <button data-tab="query"    class="tab">治具/機種查詢</button>
                   <button data-tab="logs"     class="tab">使用/更換記錄</button>
-                  <button data-tab="stats"    class="tab">治具情況統計</button>
                   <button data-tab="admin"    class="tab">後台管理</button>
                 </nav>
 
@@ -128,6 +127,25 @@
                 <!-- 儀表板 Dashboard -->
                 <!-- ============================================================= -->
                 <section id="tab-dashboard" class="space-y-6">
+                  <!-- 統計卡片 -->
+                  <div class="grid md:grid-cols-4 gap-4">
+                    <div class="card p-5 stat-card">
+                      <div class="text-sm opacity-90">總治具數量</div>
+                      <div class="text-3xl font-bold mt-2" id="statTotalFixtures">0</div>
+                    </div>
+                    <div class="card p-5 bg-gradient-to-br from-green-400 to-emerald-600 text-white">
+                      <div class="text-sm opacity-90">正常使用中</div>
+                      <div class="text-3xl font-bold mt-2" id="statActiveFixtures">0</div>
+                    </div>
+                    <div class="card p-5 bg-gradient-to-br from-amber-400 to-orange-600 text-white">
+                      <div class="text-sm opacity-90">壽命未達標</div>
+                      <div class="text-3xl font-bold mt-2" id="statUnderLifespan">0</div>
+                    </div>
+                    <div class="card p-5 bg-gradient-to-br from-red-400 to-rose-600 text-white">
+                      <div class="text-sm opacity-90">即將更換</div>
+                      <div class="text-3xl font-bold mt-2" id="statNeedReplacement">0</div>
+                    </div>
+                  </div>
                   <div class="grid md:grid-cols-3 gap-4">
                     <div class="card p-5">
                       <div class="flex items-center justify-between">
@@ -148,19 +166,16 @@
                     <div class="card p-5">
                       <div class="flex items-center justify-between">
                         <h3 class="font-semibold">即將更換治具</h3>
-                        <button class="btn btn-ghost text-s" onclick="downloadCSV('upcoming.csv', mockUpcomingCSV())">匯出</button>
                       </div>
                       <div class="mt-3 space-y-2 max-h-40 overflow-auto" id="upcomingList"></div>
                     </div>
                   </div>
 
-                  <div class="card p-5">
-                    <div class="flex items-center justify-between mb-3">
-                      <h3 class="font-semibold">庫存概覽</h3>
-                      <div class="flex items-center gap-2">
-                        <input id="searchDash" class="w-48 border rounded-xl px-3 py-1.5 text-sm" placeholder="搜尋治具/機種..." />
-                        <button class="btn btn-ghost text-sm" onclick="filterDashboard()">篩選</button>
-                      </div>
+                  <!-- 不耐用治具清單 -->
+                  <div class="card p-5 space-y-4">
+                    <div class="flex items-center justify-between">
+                      <h3 class="font-semibold">不耐用治具清單(壽命未達預設值)</h3>
+                      <button class="btn btn-ghost text-sm" onclick="downloadCSV('undurable_fixtures.csv', toCSV(getUndurableFixtures()))">匯出清單</button>
                     </div>
                     <div class="overflow-auto">
                       <table class="min-w-full text-sm">
@@ -168,14 +183,35 @@
                           <tr>
                             <th class="py-2 pr-4">治具編號</th>
                             <th class="py-2 pr-4">名稱</th>
-                            <th class="py-2 pr-4">機種</th>
-                            <th class="py-2 pr-4">儲位</th>
-                            <th class="py-2 pr-4">狀態</th>
-                            <th class="py-2 pr-4">使用次數/週期</th>
+                            <th class="py-2 pr-4">預期壽命</th>
+                            <th class="py-2 pr-4">實際使用</th>
+                            <th class="py-2 pr-4">達成率</th>
+                            <th class="py-2 pr-4">警示等級</th>
                             <th class="py-2 pr-4">負責人</th>
+                            <th class="py-2 pr-4">操作</th>
                           </tr>
                         </thead>
-                        <tbody id="dashTable"></tbody>
+                        <tbody id="undurableTable"></tbody>
+                      </table>
+                      <div id="undurablePagination" class="flex justify-center mt-4"></div>
+                    </div>
+                  </div>
+
+                  <div class="card p-5">
+                    <div class="flex items-center justify-between mb-3">
+                      <h3 class="font-semibold">常用治具</h3>
+                    </div>
+                    <div class="overflow-auto">
+                      <table class="min-w-full text-sm">
+                        <thead class="text-left text-gray-500">
+                          <tr>
+                            <th class="py-2 pr-4">治具編號</th>
+                            <th class="py-2 pr-4">名稱</th>
+                            <th class="py-2 pr-4">狀態</th>
+                            <th class="py-2 pr-4">使用次數/週期</th>
+                          </tr>
+                        </thead>
+                        <tbody id="commonFixturesTable"></tbody>
                       </table>
                     </div>
                   </div>
@@ -192,19 +228,19 @@
                     <button class="subtab subtab-active"
                             onclick="showTransactionSubTab('ttab-register')"
                             data-ttab="register">
-                      交易登記
+                      新增收/退料
                     </button>
 
                     <button class="subtab"
                             onclick="showTransactionSubTab('ttab-view-all')"
                             data-ttab="view-all">
-                      交易記錄
+                      收/退料查詢
                     </button>
 
                     <button class="subtab subtab-active"
                             data-ttab="inventory"
                             onclick="showTransactionSubTab('inventoryTab')">
-                      庫存檢視
+                      治具庫存檢視
                     </button>
 
 
@@ -957,58 +993,6 @@
                         </div>
                       </div>
                     </section>
-
-
-                <!-- ============================================================= -->
-                <!-- 治具情況統計 Stats -->
-                <!-- ============================================================= -->
-                <section id="tab-stats" class="hidden space-y-4">
-                  <!-- 統計卡片 -->
-                  <div class="grid md:grid-cols-4 gap-4">
-                    <div class="card p-5 stat-card">
-                      <div class="text-sm opacity-90">總治具數量</div>
-                      <div class="text-3xl font-bold mt-2" id="statTotalFixtures">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-green-400 to-emerald-600 text-white">
-                      <div class="text-sm opacity-90">正常使用中</div>
-                      <div class="text-3xl font-bold mt-2" id="statActiveFixtures">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-amber-400 to-orange-600 text-white">
-                      <div class="text-sm opacity-90">壽命未達標</div>
-                      <div class="text-3xl font-bold mt-2" id="statUnderLifespan">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-red-400 to-rose-600 text-white">
-                      <div class="text-sm opacity-90">即將更換</div>
-                      <div class="text-3xl font-bold mt-2" id="statNeedReplacement">0</div>
-                    </div>
-                  </div>
-
-                  <!-- 不耐用治具清單 -->
-                  <div class="card p-5 space-y-4">
-                    <div class="flex items-center justify-between">
-                      <h3 class="font-semibold">不耐用治具清單(壽命未達預設值)</h3>
-                      <button class="btn btn-ghost text-sm" onclick="downloadCSV('undurable_fixtures.csv', toCSV(getUndurableFixtures()))">匯出清單</button>
-                    </div>
-                    <div class="overflow-auto">
-                      <table class="min-w-full text-sm">
-                        <thead class="text-left text-gray-500">
-                          <tr>
-                            <th class="py-2 pr-4">治具編號</th>
-                            <th class="py-2 pr-4">名稱</th>
-                            <th class="py-2 pr-4">預期壽命</th>
-                            <th class="py-2 pr-4">實際使用</th>
-                            <th class="py-2 pr-4">達成率</th>
-                            <th class="py-2 pr-4">警示等級</th>
-                            <th class="py-2 pr-4">負責人</th>
-                            <th class="py-2 pr-4">操作</th>
-                          </tr>
-                        </thead>
-                        <tbody id="undurableTable"></tbody>
-                      </table>
-                      <div id="undurablePagination" class="flex justify-center mt-4"></div>
-                    </div>
-                  </div>
-                </section>
 
 
                 <!-- ============================================================= -->
@@ -2261,7 +2245,9 @@
         <!-- 認證與登入 UI 控制（loginModal, doLogin, loadCurrentUser） -->
             <script src="/js/app/app-auth.js"></script>
             <script src="/js/app/app-admin.js"></script>
+            <script src="/js/api/api-dashboard.js"></script>
             <script src="/js/app/app-dashboard.js"></script>
+
 
         <!-- 主控制（頁面切換/初始化）         -->
             <script src="/js/app/app-main.js"></script>
@@ -2318,10 +2304,8 @@
         <!-- 🔢 序號工具 / 統計  -->
             <script src="/js/api/api-serials.js"></script>
             <script src="/js/app/app-serials.js"></script>
-            <script src="/js/api/api-stats.js"></script>
             <script src="/js/api/api-inventory.js"></script>
             <script src="/js/app/app-inventory.js"></script>
-            <script src="/js/app/app-stats.js"></script>
 
   </body>
 </html>
