debug-20260207-database_upgrade

--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -237,7 +237,7 @@
                       收/退料查詢
                     </button>
 
-                    <button class="subtab subtab-active"
+                    <button class="subtab"
                             data-ttab="inventory"
                             onclick="showTransactionSubTab('inventoryTab')">
                       治具庫存檢視
@@ -901,7 +901,6 @@
                                   <th class="py-2 px-4 w-32">機種代碼</th>
                                   <th class="py-2 px-4 w-40">名稱</th>
                                   <th class="py-2 px-4 w-64">備註</th>
-                                  <th class="py-2 px-4 w-24">操作</th>
                                 </tr>
                               </thead>
                               <tbody id="modelTable" class="divide-y divide-gray-100 text-gray-800"></tbody>
