--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -130,7 +130,7 @@
                   <!-- 統計卡片 -->
                   <div class="grid md:grid-cols-4 gap-4">
                     <div class="card p-5 stat-card">
-                      <div class="text-sm opacity-90">總治具數量</div>
+                      <div class="text-sm opacity-90">總治具種類</div>
                       <div class="text-3xl font-bold mt-2" id="statTotalFixtures">0</div>
                     </div>
                     <div class="card p-5 bg-gradient-to-br from-green-400 to-emerald-600 text-white">
@@ -378,6 +378,7 @@
                                 <th class="py-2 pr-4">單號</th>
                                 <th class="py-2 pr-4">記錄類型</th>
                                 <th class="py-2 pr-4">數量</th>
+                                <th class="py-2 pr-4">來源</th>
                                 <th class="py-2 pr-4">操作人員</th>
                               </tr>
                             </thead>
