--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -410,12 +410,6 @@
                                 onclick="switchViewAllMode('serial')">
                           序號查詢
                         </button>
-                        <button class="px-4 py-2 rounded-lg text-sm font-medium transition-all
-                                       bg-gray-100 text-gray-600 hover:bg-gray-200"
-                                id="vaMode-datecode"
-                                onclick="switchViewAllMode('datecode')">
-                          Datecode查詢
-                        </button>
                       </div>
 
                       <!-- 第二級：篩選條件 -->
@@ -456,26 +450,22 @@
 
                             <div class="field">
                               <label class="text-sm text-gray-600">治具編號</label>
-                              <input id="vaSerialFixture" class="input" placeholder="C-00001"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaSerialFixture" class="input" placeholder="C-00001">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">單號</label>
-                              <input id="vaSerialOrderNo" class="input" placeholder="25123456"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaSerialOrderNo" class="input" placeholder="25123456">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">序號</label>
-                              <input id="vaSerialSerial" class="input" placeholder="SN001"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaSerialSerial" class="input" placeholder="SN001">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">操作人員</label>
-                              <input id="vaSerialOperator" class="input" placeholder="工號"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaSerialOperator" class="input" placeholder="工號">
                             </div>
                           </div>
                         </div>
@@ -513,26 +503,22 @@
 
                             <div class="field">
                               <label class="text-sm text-gray-600">治具編號</label>
-                              <input id="vaDatecodeFixture" class="input" placeholder="C-00001"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaDatecodeFixture" class="input" placeholder="C-00001">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">單號</label>
-                              <input id="vaDatecodeOrderNo" class="input" placeholder="25123456"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaDatecodeOrderNo" class="input" placeholder="25123456">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">Datecode</label>
-                              <input id="vaDatecodeDatecode" class="input" placeholder="2024W12"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaDatecodeDatecode" class="input" placeholder="2024W12">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">操作人員</label>
-                              <input id="vaDatecodeOperator" class="input" placeholder="工號"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaDatecodeOperator" class="input" placeholder="工號">
                             </div>
                           </div>
                         </div>
@@ -570,32 +556,27 @@
 
                             <div class="field">
                               <label class="text-sm text-gray-600">治具編號</label>
-                              <input id="vaAllFixture" class="input" placeholder="C-00001"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaAllFixture" class="input" placeholder="C-00001">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">單號</label>
-                              <input id="vaAllOrderNo" class="input" placeholder="25123456"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaAllOrderNo" class="input" placeholder="25123456">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">Datecode</label>
-                              <input id="vaAllDatecode" class="input" placeholder="2024W12"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaAllDatecode" class="input" placeholder="2024W12">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">序號</label>
-                              <input id="vaAllSerial" class="input" placeholder="SN001"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaAllSerial" class="input" placeholder="SN001">
                             </div>
 
                             <div class="field">
                               <label class="text-sm text-gray-600">操作人員</label>
-                              <input id="vaAllOperator" class="input" placeholder="工號"
-                                     onkeypress="handleViewSearchKeypress(event, 'viewall')">
+                              <input id="vaAllOperator" class="input" placeholder="工號">
                             </div>
                           </div>
                         </div>
