--- a/backend/web/index.html
+++ b/backend/web/index.html
@@ -128,24 +128,6 @@
                 <!-- ============================================================= -->
                 <section id="tab-dashboard" class="space-y-6">
                   <!-- 統計卡片 -->
-                  <div class="grid md:grid-cols-4 gap-4">
-                    <div class="card p-5 stat-card">
-                      <div class="text-sm opacity-90">總治具種類</div>
-                      <div class="text-3xl font-bold mt-2" id="statTotalFixtures">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-green-400 to-emerald-600 text-white">
-                      <div class="text-sm opacity-90">正常使用中</div>
-                      <div class="text-3xl font-bold mt-2" id="statActiveFixtures">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-amber-400 to-orange-600 text-white">
-                      <div class="text-sm opacity-90">壽命未達標</div>
-                      <div class="text-3xl font-bold mt-2" id="statUnderLifespan">0</div>
-                    </div>
-                    <div class="card p-5 bg-gradient-to-br from-red-400 to-rose-600 text-white">
-                      <div class="text-sm opacity-90">即將更換</div>
-                      <div class="text-3xl font-bold mt-2" id="statNeedReplacement">0</div>
-                    </div>
-                  </div>
                   <div class="grid md:grid-cols-3 gap-4">
                     <div class="card p-5">
                       <div class="flex items-center justify-between">
@@ -171,50 +153,6 @@
                     </div>
                   </div>
 
-                  <!-- 不耐用治具清單 -->
-                  <div class="card p-5 space-y-4">
-                    <div class="flex items-center justify-between">
-                      <h3 class="font-semibold">不耐用治具清單(壽命未達預設值)</h3>
-                      <button class="btn btn-ghost text-sm" onclick="downloadCSV('undurable_fixtures.csv', toCSV(getUndurableFixtures()))">匯出清單</button>
-                    </div>
-                    <div class="overflow-auto">
-                      <table class="min-w-full text-sm">
-                        <thead class="text-left text-gray-500">
-                          <tr>
-                            <th class="py-2 pr-4">治具編號</th>
-                            <th class="py-2 pr-4">名稱</th>
-                            <th class="py-2 pr-4">預期壽命</th>
-                            <th class="py-2 pr-4">實際使用</th>
-                            <th class="py-2 pr-4">達成率</th>
-                            <th class="py-2 pr-4">警示等級</th>
-                            <th class="py-2 pr-4">負責人</th>
-                            <th class="py-2 pr-4">操作</th>
-                          </tr>
-                        </thead>
-                        <tbody id="undurableTable"></tbody>
-                      </table>
-                      <div id="undurablePagination" class="flex justify-center mt-4"></div>
-                    </div>
-                  </div>
-
-                  <div class="card p-5">
-                    <div class="flex items-center justify-between mb-3">
-                      <h3 class="font-semibold">常用治具</h3>
-                    </div>
-                    <div class="overflow-auto">
-                      <table class="min-w-full text-sm">
-                        <thead class="text-left text-gray-500">
-                          <tr>
-                            <th class="py-2 pr-4">治具編號</th>
-                            <th class="py-2 pr-4">名稱</th>
-                            <th class="py-2 pr-4">狀態</th>
-                            <th class="py-2 pr-4">使用次數/週期</th>
-                          </tr>
-                        </thead>
-                        <tbody id="commonFixturesTable"></tbody>
-                      </table>
-                    </div>
-                  </div>
                 </section>
 
 
@@ -714,8 +652,8 @@
                                 <th class="py-2 px-3 text-left font-mono">治具</th>
                                 <th class="py-2 px-3 text-left">名稱</th>
                                 <th class="py-2 px-3 text-right">總在庫</th>
-                                <th class="py-2 px-3 text-right">自購</th>
                                 <th class="py-2 px-3 text-right">客供</th>
+                                <th class="py-2 px-3 text-right">自購</th>
                                 <th class="py-2 px-3 text-right">已退</th>
                                 <th class="py-2 px-3 text-center">操作</th>
 
@@ -1537,12 +1475,13 @@
                           </div>
 
                           <div class="field">
-                            <label class="label-xs">負責人 (owner_id)</label>
-                            <input id="fxOwnerFilter"
-                                   class="input"
-                                   placeholder="ID（可留空）"
-                                   onkeydown="if(event.key==='Enter'){fxPage=1;loadFixtureList();}" />
-                          </div>
+                              <label class="label-xs">負責人</label>
+                              <select id="fxOwnerFilter"
+                                      class="input"
+                                      onchange="fxPage=1;loadFixtureList();">
+                                <option value="">全部</option>
+                              </select>
+                            </div>
 
                           <div class="field">
                             <label class="label-xs">每頁筆數</label>
